// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders expected classes 1`] = `
<div>
  <span
    class="container Icon--zendesk"
    data-testid="Icon--zendesk"
    type="Icon--zendesk"
  >
    <svg
      aria-hidden="true"
      realfilename="widget-icon_zendesk.svg"
    />
  </span>
</div>
`;

exports[`Icon renders expected flipx classes when flipX is true 1`] = `
<div>
  <span
    class="container Icon--zendesk flipX"
    data-testid="Icon--zendesk"
    type="Icon--zendesk"
  >
    <svg
      aria-hidden="true"
      realfilename="widget-icon_zendesk.svg"
    />
  </span>
</div>
`;

exports[`Icon renders expected mobile classes when mobile is true 1`] = `
<div>
  <span
    class="container Icon--zendesk mobile"
    data-testid="Icon--zendesk"
    type="Icon--zendesk"
  >
    <svg
      aria-hidden="true"
      realfilename="widget-icon_zendesk.svg"
    />
  </span>
</div>
`;
